src/app.css
.home-section{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

.home-text{
  display: flex;
  flex-direction: column;
  align-items: left;
  justify-content: center;
  width: 50vw;
}

.projects{
  justify-content: center;
  text-align: center;
  align-content: center;
  height: 100vh;
  width: 100vw;
}

@media (max-width: 450px) {
  .home-section{
    height: 50vh;
  }

  .home-text{
    width: 100vw;
  }
  .projects{
    padding-top: 0rem;
    height: inherit;
  }
}

.about-text{
  padding-top: 50px;
}

